--- a/ToDo/index.html
+++ b/ToDo/index.html
@@ -43,7 +43,7 @@
         <button class="detail-btn btn">提交</button>
         <button class="leave-btn btn">放弃</button>
     </div>
-    <!-- <div class="shade"></div> -->
+    <div class="shade"></div>
     <script src="js/jquery.js"></script>
     <script src="js/jquery.datetimepicker.full.js"></script>
     <script src="js/store.js"></script>
